--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "release:finish": "bash scripts/finish-release",
     "bundle-report": "npm run build:docs -- --stats-json && webpack-bundle-analyzer dist/stats.json",
     "generate:changelog": "./node_modules/.bin/conventional-changelog -i docs/CHANGELOG.md -s -p angular",
-    "a11y": "scripts/a11y/a11y.sh -r scripts/a11y/routes.txt"
+    "a11y": "scripts/a11y/a11y.sh -r scripts/a11y/routes.txt",
+    "build:ghpages": "./node_modules/@angular/cli/bin/ng build --prod --optimization --output-path covalent-docs --base-href /covalent/v2.1.x/",
+    "deploy:ghpages": "node --max_old_space_size=5048 ./node_modules/@koumoul/gh-pages-multi/bin/gh-pages-multi.js deploy -s covalent-docs -t v2.1.x",
+    "publish:gh-pages": "npm run build:ghpages && npm run deploy:ghpages"
   },
   "engines": {
     "node": ">=10.15.3",
@@ -98,6 +101,7 @@
     "@angular/cli": "7.1.2",
     "@angular/compiler-cli": "^7.2.12",
     "@covalent/tools": "2.0.0-beta.2",
+    "@koumoul/gh-pages-multi": "^0.7.1",
     "@types/fs-extra": "^4.0.0",
     "@types/hammerjs": "^2.0.30",
     "@types/jasmine": "~2.8.6",
@@ -111,8 +115,8 @@
     "fs-extra": "^4.0.0",
     "glob": "^6.0.4",
     "gulp": "4.0.0",
-    "gulp-hub": "4.2.0",
     "gulp-bump": "2.1.0",
+    "gulp-hub": "4.2.0",
     "gulp-postcss": "7.0.0",
     "gulp-sass": "3.1.0",
     "gulp-sourcemaps": "1.6.0",
