feat(build): added a deploy script for latest and version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
     "noUnusedLocals": false,
     "allowUnreachableCode": false,
     "pretty": true,
-    "importHelpers": true
+    "importHelpers": true,
+    "resolveJsonModule": true
   }
 }
