--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "prettier": "./node_modules/.bin/prettier --write './**/*.{ts,js,json,css,scss,yml,html,md}'",
     "prettier:check": "./node_modules/.bin/prettier --check './**/*.{ts,js,json,css,scss,yml,html,md}'",
     "commitlint": "node ./node_modules/@commitlint/travis-cli/lib/cli.js",
-    "build:ghpages": "./node_modules/@angular/cli/bin/ng build --prod --optimization --output-path covalent-docs --base-href /covalent/3.0.0-beta.3/",
-    "deploy:ghpages": "./node_modules/@koumoul/gh-pages-multi/bin/gh-pages-multi.js deploy -s covalent-docs --no-history",
-    "gh-pages": "npm run build:ghpages && deploy:ghpages"
+    "build:ghpages": "node --max_old_space_size=5048 ./node_modules/@angular/cli/bin/ng build --prod --optimization --output-path covalent-docs --base-href /covalent/v${npm_package_version}/",
+    "deploy:version": "node --max_old_space_size=5048 ./node_modules/@koumoul/gh-pages-multi/bin/gh-pages-multi.js deploy -s covalent-docs -t v${npm_package_version}",
+    "deploy:latest": "node --max_old_space_size=5048 ./node_modules/@koumoul/gh-pages-multi/bin/gh-pages-multi.js deploy -s covalent-docs --no-history",
+    "gh-pages": "npm run build:ghpages && npm run deploy:version && npm run deploy:latest"
   },
   "engines": {
     "node": ">=10.15.3",
